[package]
name = "memshadow-protocol"
version = "3.0.0"
edition = "2021"

[dependencies]
rand = "0.8"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
subtle = "2.5"  # For constant-time comparison
getrandom = "0.2"
flate2 = "1.0"

[lib]
name = "memshadow"
path = "src/lib.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

